--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,9 +14,9 @@
   padding: 30px 0 0 0;
 }
 .zygote-splash header h1 {
-  margin: 0 0 5px 0;
+  margin: 0 0 35px 0;
 }
 .zygote-splash header .tagline {
   font-size: 1em;
-  color: gray;
+  color: blue;
 }
