--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,9 @@
+/* line 3, style.scss */
 .zygote-splash {
   width: 280px;
   margin: 20% auto;
 }
+/* line 8, style.scss */
 .zygote-splash img {
   display: inline-block;
   float: left;
@@ -9,14 +11,17 @@
   width: 150px;
   margin: 0 5px 0 0;
 }
+/* line 16, style.scss */
 .zygote-splash header {
   display: inline-block;
   padding: 30px 0 0 0;
 }
+/* line 20, style.scss */
 .zygote-splash header h1 {
-  margin: 0 0 35px 0;
+  margin: 0 0 5px 0;
 }
+/* line 24, style.scss */
 .zygote-splash header .tagline {
   font-size: 1em;
-  color: blue;
+  color: gray;
 }
