--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -18,12 +18,12 @@
 		padding: 30px 0 0 0;
 		
 		h1 {
-			margin:0 0 35px 0;
+			margin:0 0 5px 0;
 		}
 		
 		.tagline {			
 			font-size: 1em;
-			color: blue;			
+			color: gray;		
 		}
 	}
 }
